# EventMaps

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  REPO_ROADMAP_AUDIT.md  ROADMAP.md  config.py  main.py  package-lock.json  package.json  pyproject.toml  vitest.config.js
.claude/: settings.json  settings.local.json
.claude/commands/: handle-codex-review.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codex-review.yml
api/: app.py
api/routes/: events.py  scrape.py
db/: events.py  jobs.py  migrations.py  schema.py  store.py
dedup/: __init__.py  cluster.py  matching.py  normalize.py
docs/: ARCHITECTURE.md  branches-inventory-2026-07-05.md  guide-scraping-ichiban-japan.md
docs/roadmap/: 00-plan-execution.md  01-ci-cd.md  02-fixtures-tests.md  03-outils-internes.md  04-arborescence.md  05-documentation.md  06-git-gouvernance.md  07-registre-constats.md  08-backlog-produit-differe.md  README.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  config.js  drawer.js  events-list.js  favorites.js  filters.js  geolocation.js  ics-export.js  markers.js  mobile-ui.js  popups.js  share.js  state.js  tokyo-live-data.js  tokyo-live.js  utils.js  weather-messages.js  weather.js
frontend/tests/: popups.test.js  tokyo-live.test.js  utils.test.js
frontend/tests/__mocks__/: config.js
models/: attributes.py  event.py  identity.py
scrapers/: base.py  hanabi_walker.py  ichiban_japan.py  timeout_tokyo.py  tokyo_cheapo.py
scripts/: fetch_ichiban_html.py  handle_codex_review.py
tests/: conftest.py  test_api.py  test_backfill_canonical.py  test_config.py  test_dedup_api.py  test_dedup_cluster.py  test_dedup_matching.py  test_dedup_normalize.py  test_dedup_store.py  test_hanabi_walker.py  test_handle_codex_review.py  test_ichiban_japan.py  test_main.py  test_renew_fixtures.py  test_scrape_api.py  test_scrape_logs.py  test_scrape_report.py  test_scraper_alerts.py  test_sri.py  test_store.py  test_timeout_tokyo.py  test_tokyo_cheapo.py
tests/fixtures/: MANIFEST.yml  POLICY.md  hanabi_listing.html  tc_event_multi_location.html  tot_event_full.html  tot_event_news_article.html  tot_event_no_jsonld.html  tot_listing.html
tests/fixtures/hanabi/real/: event-ar0308e00896-map.html  event-ar0311e00250-map.html  event-ar0313e00858-data.html  event-ar0313e00858-map.html  event-ar0516e00063-map.html  event-ar0518e00070-map.html  event_ar0308e00896.html  event_ar0311e00250.html  event_ar0516e00063.html  event_ar0518e00070.html  listing-ar0500-1.html  listing_ar0300.html  map_ar0308e00896.html  map_ar0311e00250.html  map_ar0313e00858.html  map_ar0518e00070.html
tests/fixtures/hanabi/synthetic/: event_cancelled_data.html  event_data.html  event_map.html  event_no_map.html  event_slash_date_data.html  listing_rich.html
tests/fixtures/ij/synthetic/: article_full.html  listing.html
tests/fixtures/tc/real/: event-dagashiya-conversation-class-learn-japanese-with-retro-candy.html  (+11 more)
tools/: backfill_canonical.py  renew_fixtures.py
(+12 files in other folders)
