[project]
name = "eventmaps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.3",
    "icalendar>=7.1.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests>=2.34.1",
    "slowapi>=0.1.9",
    "tenacity>=8.0",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "httpx2>=0.28",
    "pip-audit>=2.7",
    "pytest>=9.0.3",
    "pytest-cov>=4.0",
]

[project.scripts]
scrape = "main:main"
