[project]
name = "eventmaps"
version = "0.1.0"
description = "API et scrapers pour cartographier les événements autour de Tokyo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.115",
    "icalendar>=7.1.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.14.2",
    "requests>=2.34.1",
    "slowapi>=0.1.9",
    "starlette>=1.3.1",
    "tenacity>=8.0",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "msgpack>=1.2.1",
    "pip-audit>=2.7",
    "pytest>=9.0.3",
    "pytest-cov>=4.0",
    "pyyaml>=6.0",
    "ruff>=0.9",
]

[project.scripts]
scrape = "main:main"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — géré par le formatter
]

[tool.ruff.lint.isort]
known-first-party = ["api", "db", "models", "scrapers", "config", "tools"]

[tool.pytest.ini_options]
pythonpath = ["."]
